# meteroid-clients

./: README.md
codegen/: codegen.toml  generated_files.json
codegen/src/api/: types.rs
console/: Cargo.toml
console/meteroid-api/: Cargo.toml
console/meteroid-api/src/: lib.rs
console/meteroid-console/: Cargo.toml
console/meteroid-console/src/: config.rs  main.rs
console/meteroid-subscriber/: Cargo.toml
console/meteroid-subscriber/src/: lib.rs
java/src/main/java/com/meteroid/api/: AddOns.java  (+9 more)
rust/src/: request.rs
rust/src/api/: add_ons.rs  metrics.rs  mod.rs  plans.rs  products.rs  subscriptions.rs  usage.rs
rust/src/models/: metric_usage.rs  mod.rs
spec/: openapi.json
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: index.test.ts  index.ts  webhooks.ts
typescript/src/models/: AddOn.ts  AddOnEvent.ts  AddOnEventData.ts  AddOnId.ts  AddOnListResponse.ts  Address.ts  AllComponentsScope.ts  AppliedCoupon.ts  AppliedCouponDetailed.ts  AppliedCouponId.ts  AvailableParameters.ts  BankAccountId.ts  BankTransferPaymentMethodConfig.ts  BatchJobChunkId.ts  BatchJobDetailResponse.ts  BatchJobFailuresResponse.ts  BatchJobId.ts  BatchJobItemFailureResponse.ts  BatchJobListResponse.ts  BatchJobResponse.ts  BatchJobStatus.ts  BatchJobType.ts  BillableMetricId.ts  BillingConfig.ts  BillingCycleResetPeriod.ts  BillingMetricAggregateEnum.ts  BillingPeriodEnum.ts  BillingType.ts  BillingTypeEnum.ts  BooleanEffectiveEntitlementValue.ts  BooleanEntitlementValue.ts  BooleanFeatureType.ts  BooleanResolvedEntitlementValue.ts  CalendarResetPeriod.ts  CalendarUnit.ts  CancelCheckoutSessionResponse.ts  CancelSubscriptionRequest.ts  CancelSubscriptionResponse.ts  CapacityFee.ts  CapacityFeeStructure.ts  (+252 more)
typescript/src/services/: AddOnsService.ts  BatchJobsService.ts  CheckoutSessionsService.ts  ConnectService.ts  CouponsService.ts  CreditNotesService.ts  CustomersService.ts  EntitlementsService.ts  EventsService.ts  FeaturesService.ts  InvoicesService.ts  MetricsService.ts  OAuthAppsService.ts  OAuthService.ts  PlansService.ts  ProductFamiliesService.ts  ProductsService.ts  SubscriptionsService.ts  UsageService.ts
