[package]
name = "meteroid-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and wire protocol for the Meteroid console"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
