[package]
name = "meteroid-console"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive console TUI for Meteroid billing"

[dependencies]
meteroid-api = { workspace = true }
meteroid-subscriber = { workspace = true }
meteroid-rs = { workspace = true }
tokio = { workspace = true }
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "6.0"
chrono = "0.4"
textfold = { path = "../../../textfold", features = ["ratatui"] }

[[bin]]
name = "meteroid-console"
path = "src/main.rs"
