[package]
name = "meteroid-subscriber"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Data subscriber/collector for the Meteroid console"

[dependencies]
meteroid-api = { workspace = true }
meteroid-rs = { workspace = true }
tokio = { workspace = true }
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
tokio = { workspace = true }
